--- a/popup/styles.css
+++ b/popup/styles.css
@@ -728,6 +728,22 @@ video {
   max-height: 16rem;
 }
 
+.max-h-96 {
+  max-height: 24rem;
+}
+
+.min-h-64 {
+  min-height: 16rem;
+}
+
+.min-h-36 {
+  min-height: 9rem;
+}
+
+.min-h-48 {
+  min-height: 12rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
